# event-camera-simulator

./: .env  .gitignore  README.md  config.yaml  pyproject.toml
extensions/dsi/: pyproject.toml  setup.py
extensions/dsi/src/cpp/: code.cpp
playground/: inspect_dat.ipynb  inspect_noise.ipynb  replace_material.py  run_lidar_rotating_scan.py  run_lidar_static_scan.py  test_animation.ipynb
src/: event_buffer.py
src/ecs/: __init__.py  render.py  scene.py  scene_event_only.py  scene_video_only.py
src/ecs/blender/: __init__.py  cube.py  drone.py
src/ecs/lib/: __init__.py  dat.py  event_buffer.py  event_video.py
src/ecs/logger/: __init__.py  blender_logger.py  formatter.py  handler.py
src/ecs/sensor/: __init__.py  blender_camera.py  blender_dvs.py  blender_lidar.py  blender_object.py  dvs_sensor.py  dvs_sensor_blender.py
src/uv_workspaces/: test.py
