[project]
name = "event-camera-simulator"
version = "0.1.0"
description = "A tool to simulate event-cameras inside blender scenes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "numpy==1.26.4",
    "opencv-python>=4.11.0.86",
    "setuptools>=78.0.2",
    "tqdm>=4.67.1",
    "dsi",
    "brotli>=1.1.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "bpy>=4.4.0",
    "event-stream>=1.6.3",
    "mathutils>=3.3.0",
    "omegaconf>=2.3.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "laspy>=2.5.4",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["extensions/dsi"]

[tool.uv.sources]
iebcs = { workspace = true }
dsi = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/ecs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
render = "ecs.render:main"
