[project]
name = "dsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cython>=3.0.12",
    "numpy==1.26.4",
    "setuptools>=78.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dsi"]

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"
